[Feature] Vertical carousel for trending articles

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -108,7 +108,7 @@
         <h3 class="panel-title"><b>The Devs</b></h3>
         </div> <!-- /panel-header -->
         <div class="panel-body">
-        Both Aashish Sinha and Brian Bergeron are Computer Science students at Carnegie Mellon University<br>
+        Both Aashish Sinha and Brian Bergeron study Computer Science at Carnegie Mellon University.<br>
        
         </div> <!-- /panel-body -->
         </div> <!-- /panel -->
