--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -62,7 +62,10 @@
           </center>
         </div>
           <center>
-            <a  href="#homeCarousel" data-slide="next">Trending Articles</a>
+            <a  class="list-group-item" href="#homeCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-up"></span>
+                Check out trending articles
+            </a>
           </center>
 
       </div>
@@ -71,7 +74,10 @@
           <center><br><br>Trending articles go here</center>
         </div>
         <center>
-        <a  href="#homeCarousel" data-slide="next">Enter URL</a>
+        <a  class="list-group-item" href="#homeCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+                Enter a URL
+        </a>
         </center>
       </div>
     </div>
