--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -62,10 +62,12 @@
           </center>
         </div>
           <center>
+            <div class="container">
             <a  class="list-group-item" href="#homeCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
             </a>
+            </div>
           </center>
 
       </div>
@@ -74,10 +76,12 @@
           <center><br><br>Trending articles go here</center>
         </div>
         <center>
+        <div class="container">
         <a  class="list-group-item" href="#homeCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-down"></span>
                 Enter a URL
         </a>
+        </div>
         </center>
       </div>
     </div>
