--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -62,7 +62,7 @@
           </center>
         </div>
           <center>
-            <div class="container">
+            <div class="container redbtn">
             <a  class="list-group-item" href="#homeCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
