--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -62,8 +62,8 @@
           </center>
         </div>
           <center>
-            <div class="container redbtn">
-            <a  class="list-group-item" href="#homeCarousel" data-slide="next">
+            <div class="carousel-button">
+            <button  class="redbtn" href="#homeCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
             </a>
@@ -76,8 +76,8 @@
           <center><br><br>Trending articles go here</center>
         </div>
         <center>
-        <div class="container">
-        <a  class="list-group-item" href="#homeCarousel" data-slide="next">
+        <div class="carousel-button">
+        <button  class="redbtn" href="#homeCarousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-down"></span>
                 Enter a URL
         </a>
