--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -63,7 +63,7 @@
         </div>
           <center>
             <div class="carousel-button">
-            <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
+            <button  class="redbtn btn btn-default" href="#homeCarousel" data-slide="next" margin-bottom="10px">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
             </a>
@@ -72,18 +72,19 @@
 
       </div>
       <div class="item" id="trending">
+
+       <div class="container" id="activeItemContainer">
+          <center><br><br>Trending articles go here</center>
+        </div>
         <center>
         <div class="carousel-button">
-        <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
-                <span class="glyphicon glyphicon-chevron-down"></span>
+        <button  class="redbtn btn btn-default" href="#homeCarousel" data-slide="next" margin-bottom="10px">
+                <span class="glyphicon glyphicon-chevron-up"></span>
                 Enter a URL
         </a>
         </div>
         </center>
 
-       <div class="container" id="activeItemContainer">
-          <center><br><br>Trending articles go here</center>
-        </div>
       </div>
     </div>
     
