--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -63,7 +63,7 @@
         </div>
           <center>
             <div class="carousel-button">
-            <button  class="redbtn btn btn-default" href="#homeCarousel" data-slide="next" margin-bottom="10px">
+            <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
             </a>
@@ -78,7 +78,7 @@
         </div>
         <center>
         <div class="carousel-button">
-        <button  class="redbtn btn btn-default" href="#homeCarousel" data-slide="next" margin-bottom="10px">
+        <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Enter a URL
         </a>
