--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -78,8 +78,8 @@
         </div>
         <center>
         <div class="carousel-button">
-        <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
-                <span class="glyphicon glyphicon-chevron-up"></span>
+        <button  class="redbtn" href="#homeCarousel" data-slide="prev" margin-bottom="10px">
+                <span class="glyphicon glyphicon-chevron-down"></span>
                 Enter a URL
         </a>
         </div>
