--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -143,7 +143,11 @@
 
 <div class="footer">
   <p>This <strong>CSS Sticky Footer</strong> simply stays put.</p>
-  <p class="copyright">Copyright &copy; 2013 Ryan Fait &mdash; <a href="http://ryanfait.com/" title="Las Vegas Web Design">Las Vegas Web Design</a></p>
+  <p class="copyright">Copyright &copy; 2013 Brian Bergeron &amp; Aashish Sinha &mdash; 
+  <button class="redbtn" href="https://github.com/asinha1/Analyzr.info" title="Github Link">
+  See our Project on Github
+  </a>
+  </p>
 </div>
 
 
