--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -135,7 +135,7 @@
 
 </center>
 
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 </body>
@@ -146,7 +146,7 @@
   <p class="copyright">Copyright &copy; 2013 Brian Bergeron &amp; Aashish Sinha &mdash; 
   <button class="redbtn" href="https://github.com/asinha1/Analyzr.info" title="Github Link">
   See our Project on Github
-  </a>
+  </button>
   </p>
 </div>
 
