Footer and boxes are perfect now - aashish

--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -66,7 +66,7 @@
             <button  class="redbtn" href="#homeCarousel" data-slide="next" margin-bottom="10px">
                 <span class="glyphicon glyphicon-chevron-up"></span>
                 Check out trending articles
-            </a>
+            </button>
             </div>
           </center>
 
@@ -81,7 +81,7 @@
         <button  class="redbtn" href="#homeCarousel" data-slide="prev" margin-bottom="10px">
                 <span class="glyphicon glyphicon-chevron-down"></span>
                 Enter a URL
-        </a>
+        </button>
         </div>
         </center>
 
@@ -135,19 +135,23 @@
 
 </center>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 </body>
 
 
 <div class="footer">
-  <p>This <strong>CSS Sticky Footer</strong> simply stays put.</p>
-  <p class="copyright">Copyright &copy; 2013 Brian Bergeron &amp; Aashish Sinha &mdash; 
+<center>
+<br>
+  <p color="#fff" >
+<h4>Copyright &copy; 2013 Aashish Sinha &amp; Brian Bergeron</h4>
+  </p>
+<br>
   <button class="redbtn" href="https://github.com/asinha1/Analyzr.info" title="Github Link">
   See our Project on Github
   </button>
-  </p>
+</center>
 </div>
 
 
