--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -36,7 +36,8 @@
 
         </div>
 
-        <div id="aboutdiv"><a href="/about">About</a></div>
+        <div id="aboutdiv"><a href="/about">
+        <button class="redbtn" >About</button></a></div>
       </div>
     </div>
     <div class="carousel slide vertical" id="homeCarousel" data-interval="false">
@@ -148,9 +149,11 @@
 <h4>Copyright &copy; 2013 Aashish Sinha &amp; Brian Bergeron</h4>
   </p>
 <br>
-  <button class="redbtn" href="https://github.com/asinha1/Analyzr.info" title="Github Link">
+  <a href="https://github.com/asinha1/Analyzr.info" title="Github Link">
+  <button class="redbtn">
   See our Project on Github
   </button>
+  </a>
 </center>
 </div>
 
