used .min files and hosted D3 locally for faster load time

--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -7,11 +7,10 @@
       <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
       <link rel="stylesheet" href="/stylesheets/style.css">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script src="/bootstrap/js/bootstrap.js"></script>
-      <script src="/backbone/backbone-min.js"></script>
+      <script src="/bootstrap/js/bootstrap.min.js"></script>
       <script src="/javascripts/graph.js"></script>
       <script src="/javascripts/tip.js"></script>
-      <script src="http://d3js.org/d3.v3.min.js"></script>
+      <script src="/javascripts/d3.v3.min.js"></script>
    </head>
    <body>
       <div id="topChunk">
