--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -77,6 +77,23 @@
       </div>
          <div id="tooltip" class="hidden"></div>
          <div class = "container center">
+         <h3>Not sure what to try? How about these examples?</h3>
+         <br>
+         <form class="form-inline" role="form" name="examplesForm"
+                 onsubmit="return linkRequest();">
+         <button type="submit" class="redbtn" 
+         id="urlIn" 
+         value="http://arstechnica.com/business/2013/11/half-an-operating-system-the-triumph-and-tragedy-of-os2/">
+         Example tech article
+         </button>
+         </form>
+         <form class="form-inline" role="form" name="examplesForm"
+                 onsubmit="return linkRequest();">
+         <button type="submit" class="redbtn" id="urlIn"
+         value="http://www.cnn.com/2013/12/14/world/asia/china-moon-landing/">
+         Example news article
+         </button>
+         </form>
          <div id="graphContainer" class="center" >
             <div id="graphTitle"></div>
             <div id ="filterDiv" class="btn-group">
