--- a/public/index.html
+++ b/public/index.html
@@ -128,11 +128,17 @@ placeholder="Enter URL">
          </div>
          <!--/allDataBlocks-->
          <div class="footer">
+            <div id = "alch">
+               <a href ="http://www.alchemyapi.com "> 
+               <img src="http://www.alchemyapi.com/sites/default/files/alchemyAPI.png"></a>
+               <br><a href ="http://www.alchemyapi.com "> Text Analysis by AlchemyAPI</a>
+            </div>
 
-            <h4>Copyright &copy; 2013 Aashish Sinha &amp; Brian Bergeron</h4>
+            <h3>Copyright &copy; 2013 <br></h3><h4>Aashish Sinha &amp; Brian Bergeron</h4>
 
             <br>
             <a class="redbtn" id="footerbtn" href="https://github.com/asinha1/Analyzr.info" title="Github Link">
+            <img src = "github.png">
             View analyzr on Github
             </a>
          </div>
