--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
    <head>
       <meta charset="UTF-8">
       <title>Analyzr</title>
-      <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-      <link rel="stylesheet" href="/stylesheets/style.css">
+      <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+      <link rel="stylesheet" href="stylesheets/style.css">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script src="/bootstrap/js/bootstrap.min.js"></script>
-      <script src="/javascripts/graph.js"></script>
-      <script src="/javascripts/tip.js"></script>
-      <script src="/javascripts/d3.v3.min.js"></script>
+      <script src="bootstrap/js/bootstrap.min.js"></script>
+      <script src="javascripts/graph.js"></script>
+      <script src="javascripts/tip.js"></script>
+      <script src="javascripts/d3.v3.min.js"></script>
    </head>
    <body>
       <div id="topChunk">
@@ -29,7 +29,7 @@
                   analyzr
                </div>
                <div id="aboutdiv">
-                  <input type="button" class="redbtn" value="About" onclick="location.href='/about';">
+                  <input type="button" class="redbtn" value="About" onclick="location.href='/about.html';">
                </div>
             </div>
          </div>
