--- a/public/about.html
+++ b/public/about.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<title>Analyzr | About</title>
-	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="/stylesheets/style.css">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="/bootstrap/js/bootstrap.js"></script>
-	<script src="/backbone/backbone-min.js"></script>
-	<script src="/javascripts/graph.js"></script>
-	<script src="/javascripts/tip.js"></script>
+	<script src="bootstrap/js/bootstrap.js"></script>
+	<script src="backbone/backbone-min.js"></script>
+	<script src="javascripts/graph.js"></script>
+	<script src="javascripts/tip.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 </head>
 
@@ -18,7 +18,7 @@
 
            <div class="logo">
 
-              <a href = "/"></a>
+              <a href = "."></a>
 
               <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="75px" height="75px">
                 <polygon points="37,0 0,75 75,75"
