--- a/public/index.html
+++ b/public/index.html
@@ -102,8 +102,12 @@
             </div>
             <div id="graph" class="center"></div>
          </div>
-         <br><br><br>
+         <br><br>
          <div id="allDataBlocks" class = "center">
+
+         <h2>Hover over the graph to view the data.</h2>
+
+         <br><br>
             <div class="dataRow">
                <div id="bl0" class="dataColA dataBlock"></div>
                <div id="bl1" class="dataColB dataBlock"></div>
